# FastCode

./: .gitignore  AGENTS.md  AGENT_CHECKPOINT_STATE_DESIGN.md  AGENT_CONTEXT_DSL.md  AGENT_INTEGRATION_PATTERNS.md  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  GRAPH_ENGINE_DECISION.md  HANDOFF.md  IMPLEMENTATION_TODOS.md  OPEN_CORE_GAPS.md  PERFORMANCE_TODOS.md  README.md  api.py  codex-session-019ddf34-plan.md  codex-session-019ddf34-summary.md  codex-session-019ddf34.md  env.example  justfile  lefthook.yml  main.py  mcp_server.py  pyproject.toml  pyrightconfig.json  requirements.txt  typos.toml  web_app.py  web_interface.html
fastcode/: __init__.py  agent_tools.py  answer_generator.py  cache.py  call_extractor.py  db_runtime.py  definition_extractor.py  doc_ingester.py  embedder.py  global_index_builder.py  graph_builder.py  graph_runtime.py  import_extractor.py  incremental_update.py  index_run.py  indexer.py  ir_graph_builder.py  ir_merge.py  ir_validators.py  iterative_agent.py  llm_utils.py  loader.py  main.py  manifest_store.py  mcp_graph_tools.py  module_resolver.py  parser.py  path_utils.py  pg_retrieval.py  projection_models.py  projection_store.py  projection_transform.py  pyproject.toml  query_processor.py  redo_worker.py  repo_overview.py  repo_selector.py  retriever.py  scip_indexers.py  scip_loader.py  (+11 more)
fastcode/adapters/: __init__.py  ast_to_ir.py  scip_to_ir.py
fastcode/core/: boundary.py  filtering.py  fusion.py  graph_build.py  iteration.py  parsing.py  repo_analysis.py  scip_transform.py  snapshot.py  summary.py  types.py
fastcode/effects/: db.py  fs.py  llm.py
fastcode/fastcode/_stubs/: diskcache.pyi  pathspec.pyi
fastcode/fastcode/api/: inbound.py  openapi.py  outbound.py  routes.py  serialization.py  web.py
fastcode/fastcode/app/: app_runtime.py
fastcode/fastcode/client/: __init__.py  agent_flow.py  cli.py  http_client.py  mcp_client.py  mcp_server.py  web_server.py
fastcode/fastcode/common/: __init__.py  config.py  feature_lifecycle.py  identifiers.py
fastcode/fastcode/graph/: analysis.py  contracts.py  tree_sitter.py
fastcode/fastcode/infrastructure/: AGENTS.md
fastcode/fastcode/ir/: AGENTS.md  __init__.py  code_status.py  element.py  merge.py  types.py
fastcode/fastcode/main/: _capability_register.py  _config_runtime.py  _config_schema_persistence.py  _env_registry.py  api_server.py  config.py  diagnostics.py  facades.py  fastcode.py  mcp_server.py  serve.py
fastcode/fastcode/mcp/: AGENTS.md  formatting.py  server.py
fastcode/fastcode/ports/: __init__.py  embedding.py  jobs.py  retrieval.py  storage.py
fastcode/fastcode/retrieval/: contracts.py
fastcode/fastcode/runtime_support/: __init__.py  events.py  health.py  observability.py  retry.py  runtime_state.py
fastcode/fastcode/scip/: __init__.py  ast_adapter.py  contracts.py  loader.py  resolution_bridge.py  scip_adapter.py
fastcode/fastcode/semantic/: AGENTS.md  resolution.py  symbol_index.py
fastcode/fastcode/utils/: AGENTS.md  archive.py  clock.py  filesystem.py  io.py  json.py  path_utils.py  paths.py  text.py
fastcode/schema/: __init__.py  ir.py
fastcode/src/fastcode/: __init__.py  answer_generator.py  api.py  cache.py  call_extractor.py  cli.py  db_runtime.py  definition_extractor.py  doc_ingester.py  embedder.py  global_index_builder.py  graph_builder.py  import_extractor.py  incremental_update.py  index_run.py  indexer.py  ir_graph_builder.py  ir_merge.py  ir_validators.py  iterative_agent.py  loader.py  main.py  manifest_store.py  mcp_graph_tools.py  mcp_server.py  module_resolver.py  parser.py  path_utils.py  pipeline.py  projection.py  projection_models.py  projection_store.py  projection_transform.py  publishing.py  query_handler.py  redo_worker.py  repo_overview.py  repo_selector.py  retriever.py  scip_indexers.py  (+10 more)
fastcode/tests/: .mutmut-config.toml  bench_graph_projection.py  bench_ir_merge.py  bench_validation.py  conftest.py  test_adaptive_fusion.py  test_api.py  test_ast_to_ir_parametrize.py  test_ast_to_ir_properties.py  test_chonkie_chunking.py  test_concurrency.py  test_db_runtime.py  test_db_runtime_properties.py  test_doc_ingester.py  test_doc_ingester_properties.py  test_e2e_indexing.py  test_e2e_semantic_pipeline.py  test_embedder_cache.py  test_global_index_builder.py  test_global_index_builder_properties.py  test_graph_api.py  test_graph_builder.py  test_graph_runtime.py  test_graph_runtime_properties.py  test_header_classification.py  test_incremental_update.py  test_ir_alignment_algorithm.py  test_ir_graph_builder.py  test_ir_graph_builder_properties.py  test_ir_merge.py  test_ir_merge_properties.py  test_ir_snapshot_contract.py  test_ir_validators.py  test_ir_validators_properties.py  test_iterative_agent.py  test_main.py  test_manifest_store.py  test_manifest_store_db.py  test_manifest_store_properties.py  test_mcp_directed_path.py  (+54 more)
fastcode/tests/__snapshots__/: test_projection_transform.ambr  test_semantic_ir.ambr
fastcode/tests/adapters/: test_ast_to_ir.py  test_scip_to_ir.py
fastcode/tests/api/: test_api.py  test_cors.py  test_index_run_response.py  test_schemathesis_api.py  test_serialization.py  test_web_app.py
fastcode/tests/architecture/: test_explicit_translation.py  test_facade_access.py  test_import_graph.py  test_layer_dag.py  test_materialization_boundaries.py  test_no_pydantic_in_core.py  test_no_pydantic_in_domain.py  test_package_roots.py  test_purity_gates.py  test_settings_flow.py
fastcode/tests/bdd/: test_design_intent.py  test_session_prefix.py  test_unit_grounded_ir.py
fastcode/tests/benchmarks/: bench_concurrent_queries.py  bench_edit_classes.py  bench_graph_engine_decision.py  bench_graph_projection.py  bench_ir_merge.py  bench_materialization.py  bench_scip_scope.py  bench_validation.py  conftest.py
fastcode/tests/common/: test_error.py  test_feature_lifecycle.py  test_identifiers.py  test_identifiers_contracts.py
fastcode/tests/core/: test_boundary.py  test_combination.py  test_context.py  test_filtering.py  (+8 more)
fastcode/utils/: __init__.py  _compat.py  hashing.py  json.py  paths.py
(+828 files in other folders)
