[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastcode"
version = "2.0.0"
description = "Repository-level code understanding system with multi-repo support"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core
    "python-dotenv",
    "pyyaml",
    "click",
    "gitpython",
    # Code parsing
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-java",
    "tree-sitter-go",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-rust",
    "tree-sitter-c-sharp",
    "libcst",
    # Embeddings & vector store
    "sentence-transformers",
    "faiss-cpu",
    # Search & retrieval
    "rank-bm25",
    "networkx",
    "python-igraph",
    # LLM integration
    "openai",
    "anthropic",
    "tiktoken",
    # API
    "fastapi",
    "uvicorn",
    "pydantic",
    "flask",
    # Database
    "psycopg[binary]",
    "psycopg_pool",
    # Utilities
    "tqdm",
    "numpy",
    "pandas",
    "pathspec",
    # Caching
    "diskcache",
    "redis",
    # MCP server
    "mcp[cli]",
    # Semantic chunking
    "chonkie[semantic]>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-benchmark",
    "pytest-xdist",
    "hypothesis",
    "syrupy",
    "pip-audit",
]
scip = [
    "protobuf>=6.0",
]
ladybug = [
    "real_ladybug",
]

[tool.setuptools.packages.find]
include = ["fastcode*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
addopts = "-n auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "property: hypothesis property-based tests",
    "snapshot: syrupy snapshot contract tests",
    "happy: normal-path test (valid inputs, expected behavior)",
    "edge: edge-case test (boundary, empty, invalid, extreme inputs)",
]
