[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastcode"
version = "2.0.0"
description = "Repository-level code understanding system with multi-repo support"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core
    "python-dotenv",
    "pyyaml",
    "click",
    "gitpython",
    # Code parsing
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-java",
    "tree-sitter-go",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-rust",
    "tree-sitter-c-sharp",
    "libcst",
    # Embeddings & vector store
    "sentence-transformers",
    "faiss-cpu",
    # Search & retrieval
    "rank-bm25",
    "networkx",
    "python-igraph",
    # LLM integration
    "openai",
    "anthropic",
    "tiktoken",
    # API
    "fastapi",
    "uvicorn",
    "pydantic",
    "flask",
    # Database
    "psycopg[binary]",
    "psycopg_pool",
    # Utilities
    "tqdm",
    "numpy",
    "pandas",
    "pathspec",
    # Caching
    "diskcache",
    "redis",
    # MCP server
    "mcp[cli]",
    # Semantic chunking
    "chonkie[semantic]>=1.6",
    "nanobot-ai",
]

[tool.uv.sources]
nanobot-ai = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-benchmark",
    "pytest-xdist",
    "hypothesis",
    "syrupy",
    "pip-audit",
    "lefthook",
]
scip = [
    "protobuf>=6.0",
]
ladybug = [
    "real_ladybug",
]

[tool.uv]
managed = true
dev-dependencies = ["fastcode[dev]"]

[tool.uv.workspace]
members = ["nanobot"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "C4",       # comprehensions
    "UP",       # pyupgrade
    "ANN",      # flake8-annotations
    "S",        # flake8-bandit
    "PT",       # flake8-pytest-style
    "SIM",      # flake8-simplify
    "RET",      # flake8-return
    "RSE",      # flake8-raise
    "PL",       # Pylint
    "RUF",      # Ruff-specific rules
]

ignore = [
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "ANN401", # Dynamically typed expressions (Any) in *args/kwargs
    "E501",   # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Allow assert in tests
    "ANN201",  # Missing return type for test functions
    "PLR2004", # Allow magic values in test assertions
    "PLR0913", # Allow many args in test factory functions
]
"mcp_server.py" = [
    "E402",    # Module-level imports after sys.path setup (intentional)
    "PLC0415", # Lazy imports inside tool functions (intentional)
    "ANN001",  # Missing type annotations for MCP tool helper args
    "ANN202",  # Missing return type for private helpers
    "PLW0603", # Global statement for lazy singleton
    "PLR2004", # Magic values in MCP tool bodies
    "PLR0912", # Many branches in get_file_summary
    "PLR0913", # Many args in _walk_call_chain
    "RUF013",  # Implicit Optional in _walk_call_chain default
    "RUF003",  # En-dash in docstring comment
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "tuple"

[tool.pyright]
include = ["fastcode", "tests"]
typeCheckingMode = "strict"
reportUnnecessaryComparison = true
reportUnreachableCode = true
reportUnusedVariable = true
reportUnusedCallResult = true
reportUnknownArgumentType = "error"
reportUnknownMemberType = "error"
reportUnknownVariableType = "error"
reportUntypedFunctionDecorator = "error"

[tool.setuptools.packages.find]
include = ["fastcode*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
addopts = "-n auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "property: hypothesis property-based tests",
    "snapshot: syrupy snapshot contract tests",
    "happy: normal-path test (valid inputs, expected behavior)",
    "edge: edge-case test (boundary, empty, invalid, extreme inputs)",
    "mutation: tests designed to kill mutants",
    "integration: tests requiring real database or external service",
]
