[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastcode"
version = "2.0.0"
description = "Repository-level code understanding system with multi-repo support"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core
    "python-dotenv",
    "pyyaml",
    "click",
    "gitpython",
    # Code parsing
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-java",
    "tree-sitter-go",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-rust",
    "tree-sitter-c-sharp",
    "libcst",
    # Embeddings & vector store
    "sentence-transformers",
    "faiss-cpu",
    # Search & retrieval
    "rank-bm25",
    "networkx",
    "python-igraph",
    # LLM integration
    "openai",
    "anthropic",
    "tiktoken",
    # API
    "fastapi",
    "uvicorn",
    "pydantic",
    "flask",
    # Database
    "psycopg[binary]",
    "psycopg_pool",
    # Utilities
    "tqdm",
    "numpy",
    "pandas",
    "pathspec",
    # Caching
    "diskcache",
    "redis",
    # MCP server
    "mcp[cli]",
    # Semantic chunking
    "chonkie[semantic]>=1.6",
    "nanobot-ai",
]

[tool.uv.sources]
nanobot-ai = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-benchmark",
    "pytest-xdist",
    "hypothesis",
    "syrupy",
    "pip-audit",
    "lefthook",
    "pytest-timeout",
    "pytest-subprocess",
]
scip = [
    "protobuf>=6.0",
]
ladybug = [
    "real_ladybug",
]

[tool.uv]
managed = true

[dependency-groups]
dev = ["fastcode[dev]"]

[tool.hatch.build.targets.wheel]
only-include = ["."]
packages = ["."]

[tool.hatch.build.targets.wheel.shared-data]
"." = "fastcode"
